Update website with new changes

--- a/RegistrationConfirmationforAdmin.html
+++ b/RegistrationConfirmationforAdmin.html
@@ -11,6 +11,6 @@
         <br><br><br>
         <p>You will now have administrative privileges...</p>
         <br><br><br>
-        <a href="Homepage.html">Home</a>
+        <a href="index.html">Home</a>
     </body>
 </html>
