--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <meta name="author" content="Pavan">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="fevicon.jpeg">
     </head>
     <body>
         <img src="Friends.PNG">
