--- a/RegistrationConfirmationforAdmin.html
+++ b/RegistrationConfirmationforAdmin.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="fevicon.jpeg">
     </head>
     <body>
         <img src="Friends.PNG" alt="error occured">
